# vmath

./: CMakeLists.txt  LICENSE  README.md
test/: CMakeLists.txt  add.cpp  dim_of.cpp  div.cpp  is_scalar.cpp  length.cpp  mul.cpp  operators.cpp  reduce.cpp  std_array.cpp  sub.cpp  tag_of.cpp  transform.cpp
vmath/: add.hpp  dim_of.hpp  div.hpp  elem.hpp  is_scalar.hpp  is_vector.hpp  length.hpp  mul.hpp  operators.hpp  reduce.hpp  sub.hpp  tag_of.hpp  transform.hpp  value_type.hpp
vmath/adapted/: std_array.hpp
vmath/operators/: add.hpp  div.hpp  mul.hpp  sub.hpp
